Finish faq block. Add massage-description photos

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -83,6 +83,10 @@
 
 @use 'blocks/video-reviews/video-reviews';
 
+@use 'blocks/massage-description/massage-description';
+
+@use 'blocks/faq/faq';
+
 @use 'blocks/price-list/price-list';
 @use 'blocks/price-list/promotion-card';
 @use 'blocks/price-list/price-list-callback-form';
