--- a/src/assets/scss/utils/themes.scss
+++ b/src/assets/scss/utils/themes.scss
@@ -661,6 +661,7 @@ $color-secondary-light: null;
 $color-secondary-transparent: null;
 $color-secondary-x-transparent: null;
 $color-background: null;
+$color-alt-background: null;
 $header-image-1: null;
 $header-image-2: null;
 $features-icons: null;
@@ -686,6 +687,7 @@ $features-icons: null;
       $color-secondary-transparent: map-get($props, 'secondary-transparent') !global;
       $color-secondary-x-transparent: map-get($props, 'secondary-x-transparent') !global;
       $color-background: map-get($props, 'background') !global;
+      $color-alt-background: map-get($props, 'alt-background') !global;
       $header-image-1: map-get($props, 'header-image-1') !global;
       $header-image-2: map-get($props, 'header-image-2') !global;
       $features-icons: map-get($props, 'features-icons') !global;
@@ -706,6 +708,7 @@ $features-icons: null;
       $color-secondary-transparent: null !global;
       $color-secondary-x-transparent: null !global;
       $color-background: null !global;
+      $color-alt-background: null !global;
       $header-image-1: null !global;
       $header-image-2: null !global;
       $features-icons: null !global;
