--- a/src/pug/pages/anti-cellulite-massage.pug
+++ b/src/pug/pages/anti-cellulite-massage.pug
@@ -56,26 +56,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;антицеллюлитного массажа',
-        features: [
-          {
-            title: 'Целлюлит пропадёт совсем или&nbsp;сильно уменьшится',
-            text: `Если ваш целлюлит не&nbsp;достиг последних стадий, после курса вы полностью о&nbsp;нём забудете.
-              Но&nbsp;даже если у&nbsp;вас 4&nbsp;стадия целлюлита, кожа подтянется и&nbsp;будет выглядеть хорошо`
-          },
-          {
-            title: 'Подтянутся именно те места, которые вам не&nbsp;нравятся',
-            text: `Укрепится внутренняя и&nbsp;внешняя сторона бедра, целлюлит разгладится сзади и&nbsp;не&nbsp;будет
-              виден, когда вы кладёте ногу на&nbsp;ногу. Сгладятся недостатки фигуры, уйдут «ушки»`
-          },
-          {
-            title: 'Вы будете нравиться себе в&nbsp;купальнике и&nbsp;белье',
-            text: `Изменения после курса очень заметные, вам захочется носить короткие платья и&nbsp;покупать красивое
-              бельё. Вы будете чувствовать себя лучше, и&nbsp;больше наслаждаться жизнью`
-          }
-        ]
-      },
       massageResults: {
         title: 'Результаты антицеллюлитного массажа',
         figure: {
@@ -140,6 +120,54 @@ block variables
         poster: 'assets/img/massage-video/massage-video-poster_anticellulite.jpg',
         sticker: false
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;антицеллюлитного массажа',
+        features: [
+          {
+            title: 'Целлюлит пропадёт совсем или&nbsp;сильно уменьшится',
+            text: `Если ваш целлюлит не&nbsp;достиг последних стадий, после курса вы полностью о&nbsp;нём забудете.
+              Но&nbsp;даже если у&nbsp;вас 4&nbsp;стадия целлюлита, кожа подтянется и&nbsp;будет выглядеть хорошо`
+          },
+          {
+            title: 'Подтянутся именно те места, которые вам не&nbsp;нравятся',
+            text: `Укрепится внутренняя и&nbsp;внешняя сторона бедра, целлюлит разгладится сзади и&nbsp;не&nbsp;будет
+              виден, когда вы кладёте ногу на&nbsp;ногу. Сгладятся недостатки фигуры, уйдут «ушки»`
+          },
+          {
+            title: 'Вы будете нравиться себе в&nbsp;купальнике и&nbsp;белье',
+            text: `Изменения после курса очень заметные, вам захочется носить короткие платья и&nbsp;покупать красивое
+              бельё. Вы будете чувствовать себя лучше, и&nbsp;больше наслаждаться жизнью`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Какие ощущения при процедуре, есть ли боль?`,
+          answer: `Нет, процедуру нельзя назвать болезненной, хотя многие наши клиенты слышали, или сами сталкивались с сильной болью при корректирующем массаже. В нашей клинике боль сведена к минимуму, и многие клиенты не чувствуют дискомфорта. Такой эффект достигается тщательным разогревом и правильной техникой массажа. Процедура массажа переносится в разы легче, а эффект становится только сильнее – ведь когда клиенту не больно, мастер может глубже и качественнее проработать мышцы. В общем не настраивайтесь на боль, почти наверняка вы её не почувствуете, а если дискомфорт и будет, то недолгий и вполне терпимый.`
+        },
+        {
+          question: `Что лучше, антицеллюлитный или лимфодренажный массаж?`,
+          answer: `У них разные цели, антицеллюлитный массаж помогает избавиться от проявлений целлюлита, а лимфодренажный – от отёков, поэтому лучше тот массаж, который поможет с вашей проблемой. Если у вас отёки, в том числе на лице – вам на лимфодренажный массаж. Если есть целлюлит, но не слишком много лишнего веса – на антицеллюлитный. Если вы хотите именно похудеть, а заодно вывести лишнюю воду и избавиться от целлюлита – подойдёт ручное моделирование фигуры, которое совмещает и антицеллюлитный, и лимфодренажный массаж.`
+        },
+        {
+          question: `Как поддерживать результат?`,
+          answer: `В идеале – периодически делать простой самомассаж с использованием крема или масла, правильно питаться и вести активный образ жизни. Также будет отлично, если вы сможете 1-2 раза в год проходить повторный курс массажа – так вы довольно скоро доведёте свою фигуру до идеала и зафиксируете её в этом состоянии. На сеансе специалист расскажет вам больше о способах удержать и улучшить результат.`
+        },
+        {
+          question: `Как массаж помогает избавиться от целлюлита?`,
+          answer: `Целлюлит возникает из-за изменений в жировой ткани – жировые клетки увеличиваются в объеме, их стенки растягиваются, а сосуды слабеют. Со временем клетки склеиваются и деформируются – часть выпирает наружу, и на коже появляется “апельсиновая корка”. Причём со временем целлюлит только прогрессирует, естественного улучшения не бывает.<br>
+            <br>
+            Благодаря антицеллюлитному массажу локально усиливается приток крови, происходит расщепление и сжигание жировых капсул. Правильный массаж не вредит организму, он стимулирует клеточный обмен, что способствует улучшению структуры кожи, устранению отеков, питанию клеток и предупреждению в них застойных явлений.`
+        },
+        {
+          question: `Можно ли избавиться от целлюлита дома? Банками например, или домашним массажёром?`,
+          answer: `Уменьшить легкую форму целлюлита можно и в домашних условиях, но это займёт гораздо больше времени, чем профессиональный массаж, а результат будет намного скромнее. От запущенной же формы целлюлита невозможно избавиться самостоятельно. Но домашние методы отлично помогут в поддержании результата после курса.`
+        },
+        {
+          question: `Какие зоны массажируются на сеансе?`,
+          answer: `Бёдра и ягодицы. Эти зоны прорабатываются комплексно и очень тщательно, бёдра прорабатываются со всех сторон, с заходом на бока. В результате массажа подтягивается внутренняя сторона бедра, которую нельзя массажировать ни вакуумом, ни прочими аппаратными техниками, а также уходят ушки, и улучшается форма ног в целом.`
+        }
+      ],
       priceList: {
         showPromo: true
       }
@@ -152,6 +180,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
