--- a/src/pug/pages/back-massage.pug
+++ b/src/pug/pages/back-massage.pug
@@ -54,31 +54,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Почему нам доверяют',
-        link: {
-          url: 'about.html',
-          text: 'Больше о нас'
-        },
-        features: [
-          {
-            title: 'Первая клиника профессионального массажа в&nbsp;России',
-            text: `Не&nbsp;салон красоты и&nbsp;не&nbsp;поликлиника, где один массажист работает со&nbsp;всеми
-              по&nbsp;одному шаблону, а&nbsp;клиника со&nbsp;специализацией и&nbsp;врачами. Для нас это не&nbsp;просто
-              бизнес, мы верим в&nbsp;своё дело`
-          },
-          {
-            title: 'Работаем так, чтобы нас хотелось советовать близким',
-            text: `Нам важно, чтобы вы были довольны, и&nbsp;у&nbsp;нас неплохо получается: почти 70% клиентов приходят
-              по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте отзывы, чтобы узнать о&nbsp;нас побольше`
-          },
-          {
-            title: 'Гарантируем безопасность, результат и&nbsp;честность. Для нас важно помочь',
-            text: `Следуем принципу «Не&nbsp;навреди». Не&nbsp;завышаем количество сеансов, не&nbsp;продаём ненужные
-              процедуры и&nbsp;гарантируем результат. Мы не&nbsp;хотим зарабатывать в&nbsp;ущерб репутации`
-          }
-        ]
-      },
       massageResults: {
         title: 'Результаты лечебного массажа спины'
       },
@@ -143,6 +118,57 @@ block variables
           text: 'Авторская методика, входящая в раздел реабилитационной медицины'
         }
       },
+      featuresBlock: {
+        heading: 'Почему нам доверяют',
+        link: {
+          url: 'about.html',
+          text: 'Больше о нас'
+        },
+        features: [
+          {
+            title: 'Первая клиника профессионального массажа в&nbsp;России',
+            text: `Не&nbsp;салон красоты и&nbsp;не&nbsp;поликлиника, где один массажист работает со&nbsp;всеми
+              по&nbsp;одному шаблону, а&nbsp;клиника со&nbsp;специализацией и&nbsp;врачами. Для нас это не&nbsp;просто
+              бизнес, мы верим в&nbsp;своё дело`
+          },
+          {
+            title: 'Работаем так, чтобы нас хотелось советовать близким',
+            text: `Нам важно, чтобы вы были довольны, и&nbsp;у&nbsp;нас неплохо получается: почти 70% клиентов приходят
+              по&nbsp;совету друзей. Многие ходят к&nbsp;нам семьями. Почитайте отзывы, чтобы узнать о&nbsp;нас побольше`
+          },
+          {
+            title: 'Гарантируем безопасность, результат и&nbsp;честность. Для нас важно помочь',
+            text: `Следуем принципу «Не&nbsp;навреди». Не&nbsp;завышаем количество сеансов, не&nbsp;продаём ненужные
+              процедуры и&nbsp;гарантируем результат. Мы не&nbsp;хотим зарабатывать в&nbsp;ущерб репутации`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Я не верю, что массаж может помочь. Зажимы и боль в мышцах это одно дело. Но как он лечит грыжи, сколиоз и прочие заболевания?`,
+          answer: `Важно отличать лечебный массаж от классического и прочих видов массажа. Лечебный массаж — это официальный медицинский метод, признанный врачебным сообществом именно для излечения болезней позвоночника.<br>
+            <br>
+            Сеанс лечебного массажа нужно сравнивать с приёмом врача в больнице, а не с походом в массажный салон. А курс заменяет полноценное лечение позвоночника, а во многих случаях и операцию. При этом массаж не травматичен, так как избавляет от проблемы естественным путём.<br>
+            <br>
+            Лечебный массаж спины способен эффективно справиться с большинством заболеваний позвоночника, сложными зажимами, воспалениями. После 50 минут активной и глубокой работы с тканями, улучшается кровообращение, происходит насыщение всех тканей и клеток полезными веществами, усиливается регенерация костной и хрящевой ткани.<br>
+            <br>
+            Именно это определяет эффективность массажа в борьбе с любыми заболеваниями позвоночника.`
+        },
+        {
+          question: `Точно ли можно начинать курс без снимков МРТ, КТ или рентгена?`,
+          answer: `Чаще всего да. Наши специалисты проводят тщательную диагностику, и могут уверенно сказать, в каких случаях нет противопоказаний. Но если есть любые сомнения, то специалист всё же попросит вас сделать снимок (МРТ, КТ или рентген). Пожалуйста, отнеситесь к этому с пониманием, наша цель – ваше здоровье и полная безопасность. В большинстве случаев нет необходимости направлять пациентов на снимки, чтобы приступить к лечению.`
+        },
+        {
+          question: `От чего ещё помогает лечебный массаж спины?`,
+          answer: `От множества проблем, на первый взгляд не связанных со спиной. Например, у многих клиентов улучшается зрение, слух, повышается продуктивность и мозговая активность. Это связано с тем, что улучшается кровообращение и восстанавливается кислородное обеспечение мозга, которое было нарушено зажимами и воспалениями.<br>
+            <br>
+            Проблемы с позвоночником оказывают пагубное влияние на весь организм, часто именно ими вызвана асимметрия лица, онемение пальцев ног, челюстные зажимы. После лечения затронутые функции восстанавливаются, и улучшения происходят в самых разных органах и системах организма.`
+        },
+        {
+          question: `Как поддерживать результат?`,
+          answer: `В идеале – включить в свой график лечебную гимнастику, держать правильное положение спины и шеи, и проходить поддерживающие курсы массажа. Их периодичность зависит от многих индивидуальных факторов, обычно это раз в полгода или год. Если вы будете соблюдать рекомендации, вы забудете о боли в спине и надолго сохраните здоровье позвоночника.`
+        }
+      ],
       priceList: {
         showPromo: true
       }
@@ -155,6 +181,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
