--- a/src/pug/pages/body-lymphatic-drainage.pug
+++ b/src/pug/pages/body-lymphatic-drainage.pug
@@ -55,26 +55,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;лимфодренажного массажа',
-        features: [
-          {
-            title: 'Пропадут мешки и&nbsp;синяки под&nbsp;глазами, уменьшатся морщины и&nbsp;воспаления',
-            text: `За&nbsp;счёт разгона лимфы организм очищается от&nbsp;токсинов, и&nbsp;это сразу сказывается
-              на&nbsp;коже. А&nbsp;мешки и&nbsp;отёки по&nbsp;утрам исчезнут почти моментально`
-          },
-          {
-            title: 'Стимулируется выработка лимфоцитов, повышается иммунитет',
-            text: `Вы будете меньше болеть, забудете про&nbsp;сезонный насморк от&nbsp;любого ветерка, будете гораздо
-              легче противостоять любым вирусам`
-          },
-          {
-            title: 'Значительное ускорение лимфотока, лучше работают все органы и&nbsp;системы',
-            text: `Вы почувствуете лёгкость во&nbsp;всём организме, бодрость и&nbsp;энергию, избавитесь
-              от&nbsp;хронической усталости, которая часто вызвана застоем лимфы`
-          }
-        ]
-      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;лимфодренажном массаже',
         reviews: [
@@ -136,6 +116,46 @@ block variables
           text: 'Процедура приятная и расслабляющая, никакой боли'
         }
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;лимфодренажного массажа',
+        features: [
+          {
+            title: 'Пропадут мешки и&nbsp;синяки под&nbsp;глазами, уменьшатся морщины и&nbsp;воспаления',
+            text: `За&nbsp;счёт разгона лимфы организм очищается от&nbsp;токсинов, и&nbsp;это сразу сказывается
+              на&nbsp;коже. А&nbsp;мешки и&nbsp;отёки по&nbsp;утрам исчезнут почти моментально`
+          },
+          {
+            title: 'Стимулируется выработка лимфоцитов, повышается иммунитет',
+            text: `Вы будете меньше болеть, забудете про&nbsp;сезонный насморк от&nbsp;любого ветерка, будете гораздо
+              легче противостоять любым вирусам`
+          },
+          {
+            title: 'Значительное ускорение лимфотока, лучше работают все органы и&nbsp;системы',
+            text: `Вы почувствуете лёгкость во&nbsp;всём организме, бодрость и&nbsp;энергию, избавитесь
+              от&nbsp;хронической усталости, которая часто вызвана застоем лимфы`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Я слышала, что лимфодренажный массаж помогает худеть, это&nbsp;не&nbsp;так?`,
+          answer: `Похудение не ограничивается только уходом жира, многие лишние килограммы на теле вызваны отёками и застоем межклеточной жидкости. Именно вода уходит в первые дни диеты, поэтому в начале похудения вес уходит быстро, а после замедляется — сгонять жир тяжелее. Если вы сильно отекаете, то лимфодренажный массаж даст хороший результат. Когда отёки уйдут, вы станете выглядеть гораздо стройнее.<br>
+            <br>
+            Но если вы настроены на значительное похудение, самый быстрый и долгосрочный результат даст ручное моделирование фигуры и налаженный режим питания. Если вы хотите наладить здоровье в целом и сбросить вес в спокойном темпе, лимфодренажный массаж будет хорошим помощником при диете, он ускорит процесс похудения, а стройнеющая фигура удержит вашу мотивацию и не даст сорваться.`
+        },
+        {
+          question: `Какие ощущения при процедуре, есть ли боль?`,
+          answer: `Нет, это полностью безболезненная процедура, очень приятная и расслабляющая.`
+        },
+        {
+          question: `Что лучше, антицеллюлитный или лимфодренажный массаж?`,
+          answer: `У них разные цели, антицеллюлитный массаж помогает избавиться от проявлений целлюлита, а лимфодренажный – от отёков, поэтому лучше тот массаж, который поможет с вашей проблемой.  Если у вас отёки, в том числе на лице – вам на лимфодренажный массаж. Если есть целлюлит, но не слишком много лишнего веса – на антицеллюлитный. Если вы хотите именно похудеть, а заодно вывести лишнюю воду и избавиться от целлюлита – подойдёт ручное моделирование фигуры, которое совмещает и антицеллюлитный, и лимфодренажный массаж.`
+        },
+        {
+          question: `При каких болезнях рекомендуется лимфодренажный массаж?`,
+          answer: `Варикозное расширение вен, лечение лимфедемы, лимфостаз. Проблемы, связанные с пищеварительной, мочеполовой и выделительными системами, и все косметические недостатки, связанные с работой этих систем – отёки, мешки и синяки под глазами, акне.`
+        }
+      ],
       priceList: {
         showPromo: true
       }
@@ -147,6 +167,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
