--- a/src/pug/pages/chiromassage.pug
+++ b/src/pug/pages/chiromassage.pug
@@ -56,23 +56,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;хиромассажа',
-        features: [
-          {
-            title: 'Уменьшатся морщины, отёки, подтянется контур лица',
-            text: `Хиромассаж эффективно борется с&nbsp;признаками старения и&nbsp;такими недостатками как&nbsp;второй подбородок, поплывший овал лица и&nbsp;отёки. Вы заметите результат после первого сеанса`
-          },
-          {
-            title: 'Улучшится кожа, вы будете выглядеть моложе, свежее и&nbsp;здоровее',
-            text: `Массаж улучшит кровообращение, запустит активное питание всех клеток, ваша кожа станет упругой, увлажнённой и&nbsp;будет словно светиться изнутри`
-          },
-          {
-            title: 'У&nbsp;вас улучшится настроение, вы будете чувствовать гармонию',
-            text: `Особые массажные техники снимают возбуждение с&nbsp;центральной нервной системы. Это улучшит настроение само по&nbsp;себе, а&nbsp;изменения в&nbsp;зеркале дадут вам дополнительный повод для&nbsp;радости`
-          }
-        ]
-      },
       massageResults: {
         title: 'Результаты массажа лица',
         face: {
@@ -137,6 +120,33 @@ block variables
         poster: 'assets/img/massage-video/massage-video-poster_face.jpg',
         sticker: false
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;хиромассажа',
+        features: [
+          {
+            title: 'Уменьшатся морщины, отёки, подтянется контур лица',
+            text: `Хиромассаж эффективно борется с&nbsp;признаками старения и&nbsp;такими недостатками как&nbsp;второй подбородок, поплывший овал лица и&nbsp;отёки. Вы заметите результат после первого сеанса`
+          },
+          {
+            title: 'Улучшится кожа, вы будете выглядеть моложе, свежее и&nbsp;здоровее',
+            text: `Массаж улучшит кровообращение, запустит активное питание всех клеток, ваша кожа станет упругой, увлажнённой и&nbsp;будет словно светиться изнутри`
+          },
+          {
+            title: 'У&nbsp;вас улучшится настроение, вы будете чувствовать гармонию',
+            text: `Особые массажные техники снимают возбуждение с&nbsp;центральной нервной системы. Это улучшит настроение само по&nbsp;себе, а&nbsp;изменения в&nbsp;зеркале дадут вам дополнительный повод для&nbsp;радости`
+          }
+        ]
+      },
+      faq: [
+        locals.data.globalData.commonFaceFaq[0],
+        locals.data.globalData.commonFaceFaq[1],
+        {
+          question: `В чём отличие этого массажа от других массажей лица?`,
+          answer: `Главное отличие хиромассажа от других массажей лица в том, что он направлен не только на физическое, но и на психоэмоциональное состояние человека. После процедуры наши клиенты чувствуют, что их настроение заметно улучшилось, стало больше сил и энергии. В какой-то степени это относится ко всем расслабляющим массажам, но к хиромассажу особенно. При этом хиромассаж прекрасно справляется и со своей основной задачей – омолодить и подтянуть лицо.`
+        },
+        locals.data.globalData.commonFaceFaq[2],
+        locals.data.globalData.commonFaceFaq[3]
+      ],
       priceList: {
         showPromo: true
       }
@@ -149,6 +159,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
