--- a/src/pug/pages/figure-modeling.pug
+++ b/src/pug/pages/figure-modeling.pug
@@ -55,29 +55,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;ручного моделирования',
-        features: [
-          {
-            title: 'Вы похудеете и&nbsp;это будет заметно всем окружающим',
-            text: `За&nbsp;курс уходит и&nbsp;жир, и&nbsp;отёки, и&nbsp;лишняя межклеточная жидкость. Вы увидите минус
-              на&nbsp;весах и&nbsp;в&nbsp;объёмах, ваше похудение заметят близкие и&nbsp;коллеги. Если вы будете
-              соблюдать несложные рекомендации ваше преображение всего за&nbsp;месяц курса будет ещё более невероятным`
-          },
-          {
-            title: 'Ваша фигура станет более изящной, подтянутой, точёной',
-            text: `Лишний вес уйдёт именно с&nbsp;проблемных зон. В&nbsp;отличие от&nbsp;похудения на&nbsp;жёстких
-              диетах, с&nbsp;массажем вы сохраните грудь и&nbsp;красивую форму ягодиц, не&nbsp;столкнётесь
-              с&nbsp;рыхлостью и,&nbsp;обвисанием кожи. Напротив, тело подтянется, целлюлит разгладится`
-          },
-          {
-            title: 'Вы начнёте меняться в&nbsp;целом, полюбите себя и&nbsp;жизнь',
-            text: `Быстрые результаты в&nbsp;зеркале дают огромный заряд энергии на&nbsp;другие изменения в&nbsp;жизни.
-              Когда всего за&nbsp;месяц массажа вы не&nbsp;узнаете своё тело, вам станет легко и&nbsp;приятно меняться
-              дальше. Появятся силы и&nbsp;желание на&nbsp;спорт и&nbsp;правильное питание`
-          }
-        ]
-      },
       massageResults: {
         title: 'Результаты ручного моделирования',
         figure: {
@@ -142,6 +119,61 @@ block variables
         poster: 'assets/img/massage-video/massage-video-poster_figure-modeling.jpg',
         sticker: false
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;ручного моделирования',
+        features: [
+          {
+            title: 'Вы похудеете и&nbsp;это будет заметно всем окружающим',
+            text: `За&nbsp;курс уходит и&nbsp;жир, и&nbsp;отёки, и&nbsp;лишняя межклеточная жидкость. Вы увидите минус
+              на&nbsp;весах и&nbsp;в&nbsp;объёмах, ваше похудение заметят близкие и&nbsp;коллеги. Если вы будете
+              соблюдать несложные рекомендации ваше преображение всего за&nbsp;месяц курса будет ещё более невероятным`
+          },
+          {
+            title: 'Ваша фигура станет более изящной, подтянутой, точёной',
+            text: `Лишний вес уйдёт именно с&nbsp;проблемных зон. В&nbsp;отличие от&nbsp;похудения на&nbsp;жёстких
+              диетах, с&nbsp;массажем вы сохраните грудь и&nbsp;красивую форму ягодиц, не&nbsp;столкнётесь
+              с&nbsp;рыхлостью и,&nbsp;обвисанием кожи. Напротив, тело подтянется, целлюлит разгладится`
+          },
+          {
+            title: 'Вы начнёте меняться в&nbsp;целом, полюбите себя и&nbsp;жизнь',
+            text: `Быстрые результаты в&nbsp;зеркале дают огромный заряд энергии на&nbsp;другие изменения в&nbsp;жизни.
+              Когда всего за&nbsp;месяц массажа вы не&nbsp;узнаете своё тело, вам станет легко и&nbsp;приятно меняться
+              дальше. Появятся силы и&nbsp;желание на&nbsp;спорт и&nbsp;правильное питание`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Я правда смогу похудеть просто от курса массажа?`,
+          answer: `Да, сможете. Часть ваших лишних килограмм вызвана отёками и застоем межклеточной жидкости. Они быстро уйдут в результате механического воздействия на организм. Суть в том, что наш специалист наладит работу лимфотока и не позволит вашему организму вернуть эту жидкость. Более того, организм перестанет задерживать воду и в дальнейшем, так что вы сбросите ещё пару килограмм после курса.<br>
+            <br>
+            Ещё часть проблем фигуры вызвана не столько килограммами, сколько дряблостью кожи, неравномерностью жировых отложений, общей рыхлостью тела. Именно подтягивание контуров тела даёт самый заметный результат. Потеря килограмм от этого этапа не велика, но объёмы тают, фигура становится упругой, изящной.<br>
+            <br>
+            И наконец, наш массаж разгоняет метаболизм. С улучшенным обменом веществ ваш организм начнёт сжигать жир, даже если режим питания не самый правильный. Если калорийность вашего рациона выше нормы, это будет происходить медленно, но будет.<br>
+            <br>
+            Мы верим, что если вы пришли на курс массажа, то настроены серьёзно, и на первой процедуре порекомендуем вам несколько простых вещей, которые значительно улучшат результат.`
+        },
+        {
+          question: `Какие зоны массажируются на сеансе?`,
+          answer: `Бёдра, ягодицы, живот и руки. Все зоны прорабатываются очень тщательно, специалист делает акцент именно на ваших проблемных зонах. В результате массажа подтягиваются даже сложные дефекты, например внутренняя сторона бедра, которую нельзя массажировать ни вакуумом, ни прочими аппаратными техниками. Уходят бока и ушки, красиво очерчиваются руки, все тело стройнеет и подтягивается.`
+        },
+        {
+          question: `Какие ощущения при процедуре, есть ли боль?`,
+          answer: `Нет, процедуру нельзя назвать болезненной, хотя многие наши клиенты слышали, или сами сталкивались с сильной болью при корректирующем массаже. В нашей клинике боль сведена к минимуму, и многие клиенты не чувствуют дискомфорта. Такой эффект достигается тщательным разогревом и правильной техникой массажа. Процедура массажа переносится в разы легче, а эффект становится только сильнее – ведь когда клиенту не больно, мастер может глубже и качественнее проработать мышцы. В общем не настраивайтесь на боль, почти наверняка вы её не почувствуете, а если дискомфорт и будет, то недолгий и вполне терпимый.`
+        },
+        {
+          question: `Как усилить результат от курса? Обязательна ли диета?`,
+          answer: `Вы получите отличный эффект от курса даже без коррекции рациона, но если вы хотите значительно похудеть, диета всё же нужна. Речь не идет о строгой диете с полным отказом от любимых продуктов, достаточно питаться сбалансированно и чаще выбирать полезные блюда. Но даже если вы ничего не поменяете в питании, массаж уберёт лишние сантиметры, значительно подтянет фигуру и избавит от отёков. Если вы настроены на максимальный результат, то во время сеанса специалист с удовольствием расскажет вам о нашей методике похудения. Если совместить питание, физическую нагрузку и массаж, то за небольшие сроки можно фактически получить новое тело – стройное, упругое и подтянутое.`
+        },
+        {
+          question: `Не вернутся ли килограммы и объёмы после процедуры?`,
+          answer: `Нет, не вернутся, массаж даёт длительный и стабильный результат. Конечно, если вы резко увеличите калорийность рациона, вес пойдёт вверх, здесь массаж бессилен. Но даже в таком случае за счёт массажа у вас будет больший запас "качества тела" – оно будет дольше оставаться подтянутым и упругим.`
+        },
+        {
+          question: `Как поддерживать результат?`,
+          answer: `В идеале – периодически делать простой самомассаж с использованием крема или масла, правильно питаться и вести активный образ жизни. Также будет отлично, если вы сможете 1-2 раза в год проходить повторный курс массажа – так вы довольно скоро доведёте свою фигуру до идеала и зафиксируете её в этом состоянии. На сеансе специалист расскажет вам больше о способах удержать и улучшить результат.`
+        }
+      ],
       priceList: {
         showPromo: true
       }
@@ -154,6 +186,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
