--- a/src/pug/pages/fullbody-massage.pug
+++ b/src/pug/pages/fullbody-massage.pug
@@ -55,29 +55,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;общего массажа ',
-        features: [
-          {
-            title: 'Почувствуете бодрость, тонус и&nbsp;энергию',
-            text: `Общий массаж улучшает работоспособность организма, тонус мышц, сосудов и&nbsp;состояние нервной
-              системы. Из&nbsp;организма выводятся токсины, все органы начинают работать слаженно и&nbsp;чётко, проходит
-              усталость и&nbsp;вялость`
-          },
-          {
-            title: 'Наладится здоровый сон, уйдёт стресс, улучшится настроение',
-            text: `Общий массаж благотворно влияет на&nbsp;состояние нервной системы. Уходят проявления стресса, сон
-              становится крепче, а&nbsp;за&nbsp;счёт выброса эндорфинов, настроение поднимается и&nbsp;надолго остаётся
-              хорошим`
-          },
-          {
-            title: 'Повысится иммунитет, организм оздоровится в целом',
-            text: `На&nbsp;теле находится множество биологически-активных точек и&nbsp;кожных рецепторов,
-              при&nbsp;проработке которых стимулируются функции внутренних органов. Это оздоравливает и&nbsp;укрепляет
-              все органы и&nbsp;системы, и&nbsp;значительно улучшает иммунитет`
-          }
-        ]
-      },
       reviewsBlock: {
         title: 'Отзывы об&nbsp;общем массаже',
         reviews: [
@@ -139,6 +116,47 @@ block variables
           text: 'Процедура идёт час, но можно продлить до полутора часов для большей проработки спины'
         }
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;общего массажа ',
+        features: [
+          {
+            title: 'Почувствуете бодрость, тонус и&nbsp;энергию',
+            text: `Общий массаж улучшает работоспособность организма, тонус мышц, сосудов и&nbsp;состояние нервной
+              системы. Из&nbsp;организма выводятся токсины, все органы начинают работать слаженно и&nbsp;чётко, проходит
+              усталость и&nbsp;вялость`
+          },
+          {
+            title: 'Наладится здоровый сон, уйдёт стресс, улучшится настроение',
+            text: `Общий массаж благотворно влияет на&nbsp;состояние нервной системы. Уходят проявления стресса, сон
+              становится крепче, а&nbsp;за&nbsp;счёт выброса эндорфинов, настроение поднимается и&nbsp;надолго остаётся
+              хорошим`
+          },
+          {
+            title: 'Повысится иммунитет, организм оздоровится в целом',
+            text: `На&nbsp;теле находится множество биологически-активных точек и&nbsp;кожных рецепторов,
+              при&nbsp;проработке которых стимулируются функции внутренних органов. Это оздоравливает и&nbsp;укрепляет
+              все органы и&nbsp;системы, и&nbsp;значительно улучшает иммунитет`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Какие конкретно участки массируются, и как долго?`,
+          answer: `Во время сеанса специалист проработает вашу спину, шею, голову, руки и ноги. Время проработки конкретного участка зависит от проблем и пожеланий пациента. Чаще всего на спину уходит около 25 минут, и примерно по 10 минут на все остальные части тела. В это время входит разогрев, глубокая проработка и завершающие, стабилизирующие техники.`
+        },
+        {
+          question: `Подойдёт ли этот массаж спортсменам?`,
+          answer: `Общий массаж довольно универсален и подходит практически всем, в том числе спортсменам для расслабления, повышения иммунитета, борьбы со стрессом и т.д. Но он не сможет помочь в тренировках также как это сделает спортивный массаж, у них разные цели.`
+        },
+        {
+          question: `Нужен ли курс, или хватит одного сеанса?`,
+          answer: `Все массажи рекомендуется проводить курсом, чтобы получить качественный результат и закрепить его. Это относится и к общему массажу, но даже после одного сеанса вы почувствуете расслабление, лёгкость в теле, и хорошо выспитесь ночью. Так что если ищете, чем занять свободный вечер – это отличный способ отдохнуть.`
+        },
+        {
+          question: `Какие ещё есть показания к массажу?`,
+          answer: `Помимо множества показаний, указанных выше, таких как стресс, бессонница, снижение иммунитета, напряжение и боль в мышцах, и т.д, общий массаж служит профилактикой множества заболеваний. Например, общий массаж показан при расположенности к проблемам опорно-двигательного аппарата, пищеварительной, кровеносной и нервной систем.`
+        }
+      ],
       priceList: {
         showPromo: true
       }
@@ -150,6 +168,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
