--- a/src/pug/pages/neck-massage.pug
+++ b/src/pug/pages/neck-massage.pug
@@ -54,25 +54,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;массажа шейно-воротниковой зоны',
-        features: [
-          {
-            title: 'Снятие боли в&nbsp;шее, восстановление подвижности головы',
-            text: `Массаж шейного отдела не&nbsp;справится с&nbsp;запущенными проблемами, но&nbsp;отлично снимет
-              несложные зажимы и&nbsp;мышечную усталость шейного отдела`
-          },
-          {
-            title: 'Благотворное действие на&nbsp;мозг и&nbsp;нервную систему',
-            text: `Снятие мышечного усталости и&nbsp;зажимов восстановит поток кислорода к&nbsp;мозгу, нормализует сон
-              и&nbsp;повысит общий тонус`
-          },
-          {
-            title: 'Профилактика последствий сидячей работы',
-            text: `Массаж шейно-воротниковой зоны помогает в&nbsp;профилактике заболеваний шейного отдела позвоночника`
-          }
-        ]
-      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;массаже шейно-воротниковой зоны',
         reviews: [
@@ -134,6 +115,43 @@ block variables
           text: 'Сеанс идёт 15 минут и больше подходит для профилактики'
         }
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;массажа шейно-воротниковой зоны',
+        features: [
+          {
+            title: 'Снятие боли в&nbsp;шее, восстановление подвижности головы',
+            text: `Массаж шейного отдела не&nbsp;справится с&nbsp;запущенными проблемами, но&nbsp;отлично снимет
+              несложные зажимы и&nbsp;мышечную усталость шейного отдела`
+          },
+          {
+            title: 'Благотворное действие на&nbsp;мозг и&nbsp;нервную систему',
+            text: `Снятие мышечного усталости и&nbsp;зажимов восстановит поток кислорода к&nbsp;мозгу, нормализует сон
+              и&nbsp;повысит общий тонус`
+          },
+          {
+            title: 'Профилактика последствий сидячей работы',
+            text: `Массаж шейно-воротниковой зоны помогает в&nbsp;профилактике заболеваний шейного отдела позвоночника`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Почему массаж шейно-воротниковой зоны не лечит заболевания шеи?`,
+          answer: `Главная причина в том, что позвоночником нужно заниматься комплексно, и локального воздействия на позвонки шейного отдела недостаточно. Массаж шейно-воротниковой зоны предназначен для профилактики заболеваний, а также он поможет снять боль, если она вызвана легким защемлением или простудой. Но если проблема находится глубже, массаж шейного отдела снимет лишь симптомы, не вылечив причины боли, а значит она может вернуться. Когда специалист проводит лечебный массаж спины, он находит и убирает причину боли в разных отделах спины. Лечение спины отражается и на других частях тела, уходит онемение рук и ног, лечится ассиметрия лица. Дело в том, что позвоночник нужно рассматривать как единую целостную систему, и лечить точно также — комплексно.`
+        },
+        {
+          question: `Какие ещё проблемы решает этот массаж?`,
+          answer: `По сути, больше никаких – только снятие напряжения в шее, облегчение при лёгком защемлении и боли. По-настоящему решает проблемы шейного отдела только лечебный массаж спины с комплексной и глубокой проработкой. `
+        },
+        {
+          question: `В каких случаях стоит выбрать этот массаж?`,
+          answer: `Если вы хотите зайти на массаж в перерыве от работы, или после рабочего дня – чтобы освежить голову, слегка расслабиться и сбросить дневное напряжение. Или если вы точно знаете, что боль в шее вызвана простудой, а не заболеванием позвоночника – в таком случае массаж шейного отдела подойдёт идеально.`
+        },
+        {
+          question: `Как поддерживать результат?`,
+          answer: `Старайтесь правильно сидеть – не наклоняйте сильно голову к телефону, и не вытягивайте шею к компьютеру. Время от времени делайте небольшую разминку. Эти привычки значительно улучшат состояние вашей шеи и помогут снять усталость.`
+        }
+      ],
       priceList: {
         showPromo: false
       }
@@ -145,6 +163,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
