--- a/src/pug/pages/sculptural-buccal-massage.pug
+++ b/src/pug/pages/sculptural-buccal-massage.pug
@@ -51,27 +51,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;скульптурно-буккального массажа',
-        features: [
-          {
-            title: 'Вы будете выглядеть моложе, пропадут морщины, подтянется овал&nbsp;лица',
-            text: `Исчезнет второй подбородок, кожа станет упругой и&nbsp;свежей, время как будто пойдёт для&nbsp;вас
-              вспять. Все возрастные изменения пропадут или&nbsp;сильно уменьшатся`
-          },
-          {
-            title: 'Черты вашего лица станут красивее и&nbsp;изящнее, удлинится шея',
-            text: `Скульптурно-буккальный массаж не&nbsp;только убирает недостатки, но&nbsp;и&nbsp;подчёркивает
-              достоинства. Он сделает вас красивее, даже если у&nbsp;вас совсем нет возрастных изменений и&nbsp;отёков`
-          },
-          {
-            title: 'Абсолютно безопасный результат, травмы и ухудшения исключены',
-            text: `Пластика&nbsp;— это лотерея, что-то может пойти не&nbsp;так во&nbsp;время процедуры,
-              или&nbsp;сказаться через несколько лет. С&nbsp;массажем этого не&nbsp;случится, ваше преображение будет
-              безопасным и&nbsp;естественным`
-          }
-        ]
-      },
       massageResults: {
         title: 'Результаты массажа лица',
         face: {
@@ -139,6 +118,41 @@ block variables
           text: 'Процедура абсолютно безболезненна'
         }
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;скульптурно-буккального массажа',
+        features: [
+          {
+            title: 'Вы будете выглядеть моложе, пропадут морщины, подтянется овал&nbsp;лица',
+            text: `Исчезнет второй подбородок, кожа станет упругой и&nbsp;свежей, время как будто пойдёт для&nbsp;вас
+              вспять. Все возрастные изменения пропадут или&nbsp;сильно уменьшатся`
+          },
+          {
+            title: 'Черты вашего лица станут красивее и&nbsp;изящнее, удлинится шея',
+            text: `Скульптурно-буккальный массаж не&nbsp;только убирает недостатки, но&nbsp;и&nbsp;подчёркивает
+              достоинства. Он сделает вас красивее, даже если у&nbsp;вас совсем нет возрастных изменений и&nbsp;отёков`
+          },
+          {
+            title: 'Абсолютно безопасный результат, травмы и ухудшения исключены',
+            text: `Пластика&nbsp;— это лотерея, что-то может пойти не&nbsp;так во&nbsp;время процедуры,
+              или&nbsp;сказаться через несколько лет. С&nbsp;массажем этого не&nbsp;случится, ваше преображение будет
+              безопасным и&nbsp;естественным`
+          }
+        ]
+      },
+      faq: [
+        locals.data.globalData.commonFaceFaq[0],
+        locals.data.globalData.commonFaceFaq[1],
+        {
+          question: `Чем скульптурно-буккальный массаж лучше пластики?`,
+          answer: `Если кратко, то всем. Массаж совершенно не травматичен, и практически не имеет противопоказаний. Его можно делать в любом возрасте и с любым строением лица. Хирургические вмешательства бывают неудачными, а люди после операций часто похожи друг на друга. Подправленное лицо нужно постоянно поддерживать, а если перестать это делать, лицо станет выглядеть гораздо хуже, чем если бы вы не вмешивались в него. Массажем невозможно испортить черты лица — ваше преображение будет естественным, вы станете лучшей версией себя и сохраните результат на всю жизнь, если будете его поддерживать. А если не будете — никакого ужасного отката не случится, будет медленный и обратимый возврат, не критичный. И всё это без инъекций, боли и осложнений.`
+        },
+        {
+          question: `В чём отличие этого массажа от&nbsp;других массажей лица?`,
+          answer: `Скульптурно-буккальный массаж — это очень эффективная методика, и результаты от этого массажа, пожалуй, самые яркие. Все массажи лица в нашей клинике дают отличный результат, но скульптурный массаж может сравниться лишь с пластикой лица. После курса массажа уходят не только такие очевидные недостатки как морщины, в лучшую сторону меняются даже черты лица. Этот эффект достигается тем, что мышцы прорабатываются не только с внешней стороны, но и с внутренней — через рот. В этом главная особенность скульптурно-буккального массажа.`
+        },
+        locals.data.globalData.commonFaceFaq[2],
+        locals.data.globalData.commonFaceFaq[3]
+      ],
       priceList: {
         showPromo: true
       }
@@ -151,6 +165,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
