--- a/src/pug/pages/sports-massage.pug
+++ b/src/pug/pages/sports-massage.pug
@@ -58,29 +58,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;спортивного массажа',
-        features: [
-          {
-            title: 'Улучшатся результаты тренировок',
-            text: `Если совместить тренировки с&nbsp;массажем, цель будет достигнута быстрее. Спортивный массаж
-              способствует правильному распределению нагрузки, а&nbsp;значит формированию красивого и&nbsp;здорового
-              тела`
-          },
-          {
-            title: 'Всё тело восстановится, мышцы станут эластичнее',
-            text: `Спортивный массаж положительно влияет на&nbsp;мышцы, делает их эластичнее и&nbsp;сильнее. Это полезно
-              даже тем, кто не&nbsp;занимается спортом, так как положительно влияет на&nbsp;здоровье и&nbsp;энергию
-              в&nbsp;целом`
-          },
-          {
-            title: 'Пройдёт боль после тренировок, последствия травм',
-            text: `Спортивный массаж отлично работает на&nbsp;восстановление после обычных тренировок, а&nbsp;также
-              ставит спортсменов на&nbsp;ноги после травм. Также он значительно снижает риск травмировать мышцы
-              и&nbsp;суставы`
-          }
-        ]
-      },
       reviewsBlock: {
         title: 'Отзывы о&nbsp;спортивном массаже',
         reviews: [
@@ -142,6 +119,47 @@ block variables
           text: 'Проработка довольно сильная, но безопасная'
         }
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;спортивного массажа',
+        features: [
+          {
+            title: 'Улучшатся результаты тренировок',
+            text: `Если совместить тренировки с&nbsp;массажем, цель будет достигнута быстрее. Спортивный массаж
+              способствует правильному распределению нагрузки, а&nbsp;значит формированию красивого и&nbsp;здорового
+              тела`
+          },
+          {
+            title: 'Всё тело восстановится, мышцы станут эластичнее',
+            text: `Спортивный массаж положительно влияет на&nbsp;мышцы, делает их эластичнее и&nbsp;сильнее. Это полезно
+              даже тем, кто не&nbsp;занимается спортом, так как положительно влияет на&nbsp;здоровье и&nbsp;энергию
+              в&nbsp;целом`
+          },
+          {
+            title: 'Пройдёт боль после тренировок, последствия травм',
+            text: `Спортивный массаж отлично работает на&nbsp;восстановление после обычных тренировок, а&nbsp;также
+              ставит спортсменов на&nbsp;ноги после травм. Также он значительно снижает риск травмировать мышцы
+              и&nbsp;суставы`
+          }
+        ]
+      },
+      faq: [
+        {
+          question: `Если я не занимаюсь спортом, мне есть смысл идти на этот массаж?`,
+          answer: `Если у вас нет проблем со спиной, и вы хотите более интенсивную проработку, чем даёт общий массаж — да, вполне. Спортивный массаж способствует общему оздоровлению организма, а глубокая проработка мышц приятна и наполняет энергией. Вполне возможно, что после курса спортивного массажа, вас потянет в спортзал :)`
+        },
+        {
+          question: `Подойдёт ли этот массаж тем, кто только начал заниматься?`,
+          answer: `Да, спортивный массаж значительно облегчает адаптацию организма при начале занятий. Все, кто возвращался к физическим нагрузкам после долгого перерыва, знают, что тело не сразу привыкает к режиму, мышечная боль возникает после первой же тренировки и долго держится. Спортивный массаж поможет избежать боли и усилит эффект тренировок, а значит результат появится быстрее и подстегнёт вашу мотивацию.`
+        },
+        {
+          question: `Нужен ли курс, или хватит одного сеанса?`,
+          answer: `Все массажи рекомендуется проводить курсом, чтобы получить качественный результат и закрепить его. Но спортивный массаж может применяться и периодически, для лучшего восстановления после тренировок и профилактики болевого синдрома.`
+        },
+        {
+          question: `Какие ещё есть показания к массажу?`,
+          answer: `Спортивный массаж подойдёт всем, кто ведёт активный образ жизни, хочет нарастить мышечную массу или улучшить форму мышц. Прямое показание к массажу – восстановление после тренировок и возвращение к физическим нагрузкам после перерыва. Также на спортивный массаж приходят люди, которые просто хотят расслабиться и «промять» тело, и предпочитают более интенсивную проработку, чем в общем массаже.`
+        }
+      ],
       priceList: {
         showPromo: true
       }
@@ -153,6 +171,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
