--- a/src/pug/utils/global-data.pug
+++ b/src/pug/utils/global-data.pug
@@ -172,4 +172,25 @@
       workingHours: `с 9:00 до 21:00<br>без выходных`
     }
   }
-- locals.data.globalData.company.businessDuration = locals.data.globalData.currentYear - locals.data.globalData.company.foundationYear
+-
+  locals.data.globalData.company.businessDuration = locals.data.globalData.currentYear - locals.data.globalData.company.foundationYear
+  locals.data.globalData.commonFaceFaq = [
+    {
+      question: `Как именно помогает массаж?<br>
+        За счёт чего подтягиваются мышцы?`,
+      answer: `Всё довольно просто – когда массажист работает с мышечным каркасом лица и шеи, улучшается кровообращение, цвет лица и состояние кожи. Массажист снимает спазм мышц, возвращает им правильное положение.<br><br>Все основные эстетические проблемы лица — из-за спазмированных мышц. Поэтому результат массажа проявляется так быстро, и остаётся стабильным при периодической поддержке. Глубокое воздействие, которое мы делаем в клинике, приводит к очень стойкому результату, так как восстана&shy;вливается правильное положение костей, мышц, фасций и сосудов. За счёт этого уходят морщины, отёки, зажимы, ассимет&shy;рии лица. И это — ваше настоящее лицо, а не искусственно созданное пластикой. Вы не теряете свой облик, уникальность и естественность, вы только улучшаете их, к тому же всё это полностью безопасно`
+    },
+    {
+      question: `Это не больно? Какие ощущения при&nbsp;процедуре?`,
+      answer: `Нет, массаж лица это приятная процедура. Если какая-то мышца у вас сильно спазмирована, специалист будет работать с ней очень аккуратно, и не доставит вам дискомфорта. Некоторые наши клиенты даже засыпают на сеансе. Скорее всего, процедура доставит вам только удовольствие, а если неприятные ощущения будут, то это будет лишь лёгкий дискомфорт, и то один-два раза за весь сеанс. В общем, повода переживать нет`
+    },
+    {
+      question: `Как поддерживать результат?<br>
+        Если перестану, всё разъедется?`,
+      answer: `Будет замечательно, если вы сможете приходить на поддерживающие сеансы 1-2 раза в месяц, либо курсом 1-2 раза в год. Это может показаться сложным, но такой подход поможет вам сохранить результат на долгие годы — лицо будет оставаться упругим, молодым и подтянутым. Но даже если вы решите не продолжать сеансы, лицо будет ещё долго радовать вас отличным тонусом. А дальше результат потихоньку будет становиться не таким ярким, но ничего ужасного не произойдёт. Полного отката назад не случится, лицо не станет выглядеть хуже, чем до массажа, и резкого обвисания тканей тоже не будет. Массаж, в отличие от пластики, полностью исключает такие последствия.`
+    },
+    {
+      question: `А кожа не растянется при таком воздействии?`,
+      answer: `Нет, не растянется — при правильной технике невозможно растянуть кожу массажем. Специалисты в нашей клинике работают только по лучшим мировым методикам, они уверены в каждом своём движении, и точно знают, как принести вашей внешности только пользу. Кожа после массажа станет только лучше, она будет упругой, подтянутой и свежей.`
+    }
+  ]
