--- a/src/pug/pages/classic-facial-massage.pug
+++ b/src/pug/pages/classic-facial-massage.pug
@@ -53,23 +53,6 @@ block variables
           ]
         }
       ],
-      featuresBlock: {
-        heading: 'Что вы получите от&nbsp;классического массажа',
-        features: [
-          {
-            title: 'Снимется спазм и&nbsp;усталость мышц',
-            text: ``
-          },
-          {
-            title: 'Цвет лица станет здоровым и&nbsp;однородным',
-            text: ``
-          },
-          {
-            title: 'Улучшится тонус кожи и&nbsp;мышц',
-            text: ``
-          }
-        ]
-      },
       massageResults: {
         title: 'Результаты массажа лица',
         face: {
@@ -134,6 +117,33 @@ block variables
         poster: 'assets/img/massage-video/massage-video-poster_face.jpg',
         sticker: false
       },
+      featuresBlock: {
+        heading: 'Что вы получите от&nbsp;классического массажа',
+        features: [
+          {
+            title: 'Снимется спазм и&nbsp;усталость мышц',
+            text: ``
+          },
+          {
+            title: 'Цвет лица станет здоровым и&nbsp;однородным',
+            text: ``
+          },
+          {
+            title: 'Улучшится тонус кожи и&nbsp;мышц',
+            text: ``
+          }
+        ]
+      },
+      faq: [
+        locals.data.globalData.commonFaceFaq[0],
+        locals.data.globalData.commonFaceFaq[1],
+        {
+          question: `В чём отличие этого массажа от других массажей лица?`,
+          answer: `Классический массаж — это одна из самых мягких техник, очень плавная и расслабляющая. Это давно разработанная и проверенная методика, где работа идёт только по массажным линиям. За счёт этого классический массаж не может так разительно изменить внешность, как например скульптурно-буккальный массаж. Но он прекрасно подойдёт, чтобы расслабить мышцы и улучшить тонус кожи.`
+        },
+        locals.data.globalData.commonFaceFaq[2],
+        locals.data.globalData.commonFaceFaq[3]
+      ],
       priceList: {
         showPromo: true
       }
@@ -146,6 +156,8 @@ block content
   include ../includes/modules/content/reviews-block
   include ../includes/modules/content/massage-video
   include ../includes/modules/content/features-list
+  include ../includes/modules/content/massage-description
+  include ../includes/modules/content/faq
   include ../includes/modules/content/price-list
   include ../includes/modules/footer/map-block
 
